src/game/aa
Industry.java:96: error: ';' expected
		byte subtile_x:4;
		              ^
Industry.java:97: error: ';' expected
		byte subtile_y:4;
		              ^
Industry.java:98: error: ';' expected
		byte width:4;
		          ^
Industry.java:99: error: ';' expected
		byte height:4;
		           ^
Industry.java:127: error: ']' expected
		byte produced_cargo[2];
		                    ^
Industry.java:128: error: ']' expected
		byte production_rate[2];
		                     ^
Industry.java:129: error: ']' expected
		byte accepts_cargo[3];
		                   ^
Industry.java:147: error: illegal start of expression
		d = &_draw_industry_spec1[_m[ti.tile].m3];
		    ^
Industry.java:188: error: illegal start of expression
		d = &_industry_anim_offs_3[_m[ti.tile].m3];
		    ^
Industry.java:237: error: illegal start of expression
		dits = &_industry_draw_tile_data[(ti.map5 << 2) | BitOps.GB(_m[ti.tile].m1, 0, 2)];
		       ^
Industry.java:275: error: not a statement
			if (proc >= 0) _industry_draw_tile_procs[proc](ti);
			                                        ^
Industry.java:275: error: ';' expected
			if (proc >= 0) _industry_draw_tile_procs[proc](ti);
			                                              ^
Industry.java:275: error: not a statement
			if (proc >= 0) _industry_draw_tile_procs[proc](ti);
			                                               ^
Industry.java:275: error: ';' expected
			if (proc >= 0) _industry_draw_tile_procs[proc](ti);
			                                                 ^
Industry.java:305: error: <identifier> expected
	static void GetTileDesc_Industry(TileIndex tile, TileDesc *td)
	                                                         ^
Industry.java:446: error: ';' expected
					BitOps.RET SB(tile.getMap().m1, 2, 5, 0);
					             ^
Industry.java:446: error: not a statement
					BitOps.RET SB(tile.getMap().m1, 2, 5, 0);
					                           ^
Industry.java:446: error: ';' expected
					BitOps.RET SB(tile.getMap().m1, 2, 5, 0);
					                              ^
Industry.java:467: error: ')' expected
				if (m >= 50 && (m=0,++tile.getMap().m4 >= 8)) {
				                   ^
Industry.java:467: error: not a statement
				if (m >= 50 && (m=0,++tile.getMap().m4 >= 8)) {
				                                       ^
Industry.java:467: error: ';' expected
				if (m >= 50 && (m=0,++tile.getMap().m4 >= 8)) {
				                                           ^
Industry.java:493: error: ')' expected
				if (m == 4 && (m=0,++n) == 32+1 && (n=30,b)) {
				                  ^
Industry.java:493: error: not a statement
				if (m == 4 && (m=0,++n) == 32+1 && (n=30,b)) {
				                     ^
Industry.java:493: error: ';' expected
				if (m == 4 && (m=0,++n) == 32+1 && (n=30,b)) {
				                      ^
Industry.java:493: error: ';' expected
				if (m == 4 && (m=0,++n) == 32+1 && (n=30,b)) {
				                                        ^
Industry.java:493: error: not a statement
				if (m == 4 && (m=0,++n) == 32+1 && (n=30,b)) {
				                                         ^
Industry.java:493: error: ';' expected
				if (m == 4 && (m=0,++n) == 32+1 && (n=30,b)) {
				                                          ^
Industry.java:498: error: ';' expected
					BitOps.RET SB(tile.getMap().m1, 0, 2, m);
					             ^
Industry.java:498: error: not a statement
					BitOps.RET SB(tile.getMap().m1, 0, 2, m);
					                           ^
Industry.java:498: error: ';' expected
					BitOps.RET SB(tile.getMap().m1, 0, 2, m);
					                              ^
Industry.java:498: error: not a statement
					BitOps.RET SB(tile.getMap().m1, 0, 2, m);
					                                      ^
Industry.java:498: error: ';' expected
					BitOps.RET SB(tile.getMap().m1, 0, 2, m);
					                                       ^
Industry.java:497: error: 'else' without 'if'
				} else {
				  ^
Industry.java:547: error: illegal start of expression
		FindLandscapeHeight(&ti, TileX(tile) * 16, TileY(tile) * 16);
		                    ^
Industry.java:597: error: illegal start of expression
		static final int8 _tileloop_ind_case_161[12] = {
		^
Industry.java:597: error: ']' expected
		static final int8 _tileloop_ind_case_161[12] = {
		                                         ^
Industry.java:598: error: not a statement
			11, 0, -4, -14,
			^
Industry.java:598: error: ';' expected
			11, 0, -4, -14,
			  ^
Industry.java:603: error: invalid method declaration; return type required
		SndPlayTileFx(SND_2E_EXTRAAcceptedCargo.CT_AND_POP, tile);
		^
Industry.java:603: error: <identifier> expected
		SndPlayTileFx(SND_2E_EXTRAAcceptedCargo.CT_AND_POP, tile);
		                                                  ^
Industry.java:603: error: <identifier> expected
		SndPlayTileFx(SND_2E_EXTRAAcceptedCargo.CT_AND_POP, tile);
		                                                        ^
Industry.java:605: error: <identifier> expected
		dir = Hal.Random() & 3;
		   ^
Industry.java:607: error: <identifier> expected
		v = CreateEffectVehicleAbove(
		 ^
Industry.java:614: error: illegal start of type
		if (v != null) v.u.special.unk2 = dir;
		^
Industry.java:614: error: <identifier> expected
		if (v != null) v.u.special.unk2 = dir;
		     ^
Industry.java:614: error: <identifier> expected
		if (v != null) v.u.special.unk2 = dir;
		                               ^
Industry.java:617: error: class, interface, or enum expected
	static void TileLoop_Industry(TileIndex tile)
	       ^
Industry.java:621: error: class, interface, or enum expected
		if (!(tile.getMap().m1 & 0x80)) {
		^
Industry.java:623: error: class, interface, or enum expected
			return;
			^
Industry.java:624: error: class, interface, or enum expected
		}
		^
Industry.java:628: error: class, interface, or enum expected
		TransportIndustryGoods(tile);
		^
Industry.java:630: error: class, interface, or enum expected
		n = _industry_map5_animation_next[tile.getMap().m5];
		^
Industry.java:631: error: class, interface, or enum expected
		if (n != 255) {
		^
Industry.java:633: error: class, interface, or enum expected
			tile.getMap().m5 = n;
			^
Industry.java:634: error: class, interface, or enum expected
			MarkTileDirtyByTile(tile);
			^
Industry.java:635: error: class, interface, or enum expected
			return;
			^
Industry.java:636: error: class, interface, or enum expected
		}
		^
Industry.java:648: error: class, interface, or enum expected
			break;
			^
Industry.java:650: error: class, interface, or enum expected
		case 0:
		^
Industry.java:653: error: class, interface, or enum expected
			break;
			^
Industry.java:655: error: class, interface, or enum expected
		case 47:
		^
Industry.java:658: error: class, interface, or enum expected
			break;
			^
Industry.java:660: error: class, interface, or enum expected
		case 79:
		^
Industry.java:663: error: class, interface, or enum expected
			break;
			^
Industry.java:665: error: class, interface, or enum expected
		case 29:
		^
Industry.java:668: error: class, interface, or enum expected
			break;
			^
Industry.java:670: error: class, interface, or enum expected
		case 1:
		^
Industry.java:673: error: class, interface, or enum expected
			break;
			^
Industry.java:675: error: class, interface, or enum expected
		case 48:
		^
Industry.java:678: error: class, interface, or enum expected
			break;
			^
Industry.java:680: error: class, interface, or enum expected
		case 88:
		^
Industry.java:683: error: class, interface, or enum expected
			break;
			^
Industry.java:685: error: class, interface, or enum expected
		case 10:
		^
Industry.java:688: error: class, interface, or enum expected
				AddAnimatedTile(tile);
				^
Industry.java:689: error: class, interface, or enum expected
			}
			^
Industry.java:692: error: class, interface, or enum expected
		case 49:
		^
Industry.java:694: error: class, interface, or enum expected
			break;
			^
Industry.java:697: error: class, interface, or enum expected
		case 143: {
		^
Industry.java:699: error: class, interface, or enum expected
				if (i.was_cargo_delivered) {
				^
Industry.java:701: error: class, interface, or enum expected
					tile.getMap().m4 = 0;
					^
Industry.java:702: error: class, interface, or enum expected
					AddAnimatedTile(tile);
					^
Industry.java:703: error: class, interface, or enum expected
				}
				^
Industry.java:707: error: class, interface, or enum expected
		case 161:
		^
Industry.java:709: error: class, interface, or enum expected
			break;
			^
Industry.java:711: error: class, interface, or enum expected
		case 165:
		^
Industry.java:713: error: class, interface, or enum expected
			break;
			^
Industry.java:715: error: class, interface, or enum expected
		case 174:
		^
Industry.java:717: error: class, interface, or enum expected
			break;
			^
Industry.java:718: error: class, interface, or enum expected
		}
		^
Industry.java:725: error: class, interface, or enum expected
	}
	^
Industry.java:730: error: class, interface, or enum expected
	}
	^
Industry.java:734: error: class, interface, or enum expected
		final Industry  i = GetIndustry(tile.getMap().m2);
		      ^
Industry.java:736: error: class, interface, or enum expected
		b[0] = i.produced_cargo[0];
		^
Industry.java:737: error: class, interface, or enum expected
		b[1] = i.produced_cargo[1];
		^
Industry.java:738: error: class, interface, or enum expected
	}
	^
Industry.java:748: error: class, interface, or enum expected
			if (tile.IsTileType( TileTypes.MP_INDUSTRY)) {
			^
Industry.java:751: error: class, interface, or enum expected
				}
				^
Industry.java:754: error: class, interface, or enum expected
			}
			^
Industry.java:757: error: class, interface, or enum expected
		i.xy = 0;
		^
Industry.java:758: error: class, interface, or enum expected
		_industry_sort_dirty = true;
		^
100 errors
